# project-space

./: .travis.yml  CMakeLists.txt  ReadMe.md
.travis/: windows-install-externals.sh
applications/: CMakeLists.txt
applications/project-space-app/: CMakeLists.txt  main.cpp
cmake/: FindGLUT.cmake  Findglm.cmake
project-space/: Billboard.cpp  Billboard.h  Camera.cpp  Camera.h  Color.cpp  Color.h  CompositeObject.cpp  CompositeObject.h  Cube.cpp  Cube.h  Light.cpp  Light.h  Material.cpp  Material.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Planet.cpp  Planet.h  Point3.cpp  Point3.h  Program.cpp  Program.h  Renderer.cpp  Renderer.h  ScreenPlane.cpp  ScreenPlane.h  SingleObject.cpp  SingleObject.h  Skybox.cpp  Skybox.h  Spaceship.cpp  Spaceship.h  Sphere.cpp  Sphere.h  Sun.cpp  Sun.h  Texture2D.cpp  Texture2D.h  (+10 more)
project-space/resources/objects/: SmallSpaceFighter.mtl
project-space/resources/shaders/: basic.frag.glsl  basic.vert.glsl  light.frag.glsl  light.vert.glsl  planet.frag.glsl  planet.vert.glsl  screen.frag.glsl  screen.vert.glsl  skybox.frag.glsl  skybox.vert.glsl  spaceship.frag.glsl  spaceship.vert.glsl  sun.frag.glsl  sun.vert.glsl
project-space/resources/textures/: jajspace1_back.ppm  jajspace1_front.ppm  jajspace1_left.ppm  jajspace1_right.ppm  jajspace1_top.ppm
